--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ROniiiiiiiiiiiiiiiiiiiii</h1>
+    <h1>Welcome to our study website!</h1>
+    <h2>If you would </h2>
 </body>
 </html>
