this is another test

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to our study website!</h1>
-    <h2>If you would </h2>
+    <h2>If you would like to use flashcards</h2>
+    <h3>if you would like to use a calculaotr</h3>
 </body>
 </html>
