--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to our study website!</h1>
     <h2>If you would like to use flashcards</h2>
-    <h3>if you would like to use a calculaotr</h3>
+    <h3>if you would like to use a calculator</h3>
 </body>
 </html>
