--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to our study website!</h1>
-    <h2>If you would like to use flashcards</h2>
-    <h3>if you would like to use a calculator</h3>
+    <h1>FLASHCARDS</h1>
+    <h1>CALCULATOR</h1>
 </body>
 </html>
