--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>FLASHCARDS</h1>
-    <h1>CALCULATOR</h1>
+    <h1>Flashcards</h1>
+    <h1>Calculator</h1>
+    <button>Click here to access the flashcards</button>
 </body>
 </html>
