--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Welcome</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Flashcards</h1>
-    <h1>Calculator</h1>
-    <button>Click here to access the flashcards</button>
+  <div class="greetings">
+    <h1>Welcome to Study.X!</h1>
+    <div class="button-container">
+      <a href="flashcards.html" class="big-button">Flashcards</a>
+      <a href="calculator.html" class="big-button">Calculator</a>
+    </div>
+  </div>
 </body>
 </html>
