--- a/flashcards.html
+++ b/flashcards.html
@@ -8,6 +8,8 @@
 <body>
   <div class="container">
     <h1>Flashcards</h1>
+    <!-- New heading element for the theme -->
+    <h2 id="themeHeading"></h2>
     <div class="flashcard" id="flashcard">
       <div class="content" id="cardContent"></div>
     </div>
@@ -22,3 +24,4 @@
   <script src="flashcards.js"></script>
 </body>
 </html>
+
