--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome</title>
+  <title>Study.X</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="greetings">
-    <h1>Welcome to Study.X!</h1>
-    <div class="button-container">
-      <a href="flashcards.html" class="big-button">Flashcards</a>
-      <a href="calculator.html" class="big-button">Calculator</a>
+  <div class="main-content">
+    <div class="greetings">
+      <h1>Welcome to Study.X!</h1>
+      <div class="button-container">
+        <a href="flashcards.html" class="big-button">Flashcards</a>
+        <a href="calculator.html" class="big-button">Calculator</a>
+      </div>
     </div>
   </div>
 </body>
