--- a/flashcards.html
+++ b/flashcards.html
@@ -11,7 +11,7 @@
     <!-- New heading element for the theme -->
     <h2 id="themeHeading"></h2>
     <div class="flashcard" id="flashcard">
-      <div class="content" id="cardContent"></div>
+      <div class="content flashcard" id="cardContent"></div>
     </div>
     <div class="buttons">
       <button id="flipBtn">Flip</button>
