--- a/index.html
+++ b/index.html
@@ -2,18 +2,94 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Study.X</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="main-content">
-    <div class="greetings">
-      <h1>Welcome to Study.X!</h1>
-      <div class="button-container">
-        <a href="flashcards.html" class="big-button">Flashcards</a>
-        <a href="calculator.html" class="big-button">Calculator</a>
-      </div>
+  <!-- Optional particles background container -->
+  <div id="particles-js"></div>
+
+  <!-- Splash Screen -->
+  <div id="splash">
+    <h1>Welcome to Study.X!</h1>
+    <button id="enterBtn" class="big-button">Enter the Study Room</button>
+  </div>
+
+  <!-- Main Content (hidden by default) -->
+  <div id="main" style="display:none;">
+    <!-- Score Tracker -->
+    <div id="scoreTracker">Score: <span id="score">0</span></div>
+
+    <!-- Grid Container for 4 Quadrants -->
+    <div id="grid-container">
+      <!-- Quadrant 1: Flashcards Section -->
+      <section id="flashcards">
+        <div class="container">
+          <h1>Flashcards</h1>
+          <!-- Dynamic theme heading -->
+          <h2 id="themeHeading"></h2>
+          <!-- Flashcard element -->
+          <div class="flashcard" id="flashcard">
+            <div class="content" id="cardContent"></div>
+          </div>
+          <!-- Buttons for flashcard controls -->
+          <div class="buttons">
+            <button id="flipBtn">Flip</button>
+            <button id="nextBtn">Next</button>
+          </div>
+          <!-- Back link (optional for navigation) -->
+          <div class="back">
+            <a href="index.html">Back to Home</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Quadrant 2: Calculator Section -->
+      <section id="calculator">
+        <div class="calculator-container">
+          <h1>Calculator</h1>
+          <input type="text" id="display" readonly>
+          <div class="calculator-buttons">
+            <button class="calc-btn" data-value="7">7</button>
+            <button class="calc-btn" data-value="8">8</button>
+            <button class="calc-btn" data-value="9">9</button>
+            <button class="calc-btn" data-value="/">/</button>
+            <button class="calc-btn" data-value="4">4</button>
+            <button class="calc-btn" data-value="5">5</button>
+            <button class="calc-btn" data-value="6">6</button>
+            <button class="calc-btn" data-value="*">*</button>
+            <button class="calc-btn" data-value="1">1</button>
+            <button class="calc-btn" data-value="2">2</button>
+            <button class="calc-btn" data-value="3">3</button>
+            <button class="calc-btn" data-value="-">-</button>
+            <button class="calc-btn" data-value="0">0</button>
+            <button class="calc-btn" data-value=".">.</button>
+            <button class="calc-btn" data-value="C">C</button>
+            <button class="calc-btn" data-value="+">+</button>
+            <button id="calcEquals">=</button>
+          </div>
+        </div>
+      </section>
+
+      <!-- Quadrant 3: Quiz Section -->
+      <section id="quiz">
+        <h1>Quiz</h1>
+        <div id="quizContainer">
+          <p id="quizQuestion"></p>
+          <input type="text" id="quizAnswerInput" placeholder="Type your answer here">
+          <button id="quizSubmit">Submit Answer</button>
+          <div id="quizResult"></div>
+        </div>
+      </section>
+
+      <!-- Quadrant 4: Notes Section -->
+      <section id="notes">
+        <h1>Notes</h1>
+        <textarea id="notesArea" rows="10" cols="50" placeholder="Take your notes here..."></textarea>
+      </section>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
